[tool.poetry]
package-mode = false

[project]
name = "study-helper"
version = "0.1.0"
description = "Spanish educational study helper application"
authors = [
    {name = "User", email = "user@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "questionary>=2.1.1",
    "streamlit>=1.53.0",
]
